--- a/Shop/Productpage.html
+++ b/Shop/Productpage.html
@@ -21,7 +21,7 @@
 
 		<ul class="nav">
 			<li><a href="../index.html">Home</a></li>
-			<li><a href="../Shop/shop.html" class="active" class="divider">Shop</a></li>
+			<li><a href="../Shop/shop.html" class="active divider">Shop</a></li>
 			<li><a href="blog.html">Blog</a></li>
 			<li><a href="#">Forum</a></li>
 			<li><a href="../About/about.html">About</a></li>
@@ -51,7 +51,7 @@
             <div class="productHeader"><h1>Product Info</h1></div>
 
             <div class="productPic">
-                <img src="product1.jpg">
+                <img src="product1.jpg" alt="Backpack Picture">
             </div>
             <div class="productInfo">
                   
@@ -63,7 +63,7 @@
                         <li>Material: Iron</li>
                         <li>Producer: Facile & friends</li>
                         <li>Suited for: Trekking and ice climbing</li>
-                        <li>Available colors:</li><br>
+                        <li>Available colors:</li>
                     </ul>
                     <div class="colors">
                         <div id="red"></div>
@@ -77,4 +77,6 @@
                 <a href="#">BACK TO PRODUCTS</a>
             </div>
         </div>
-</div>
+    </div>
+</body>
+</html>
